[workspace]
members = ["bundler", "dino", "dino-macros", "dino-server"]
resolver = "2"

[workspace.dependencies]
bundler = { path = "bundler" }
dino-macros = { path = "dino-macros" }
tokio = { version = "1.42.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "io-util",
] }
serde_json = "1.0.133"
