[package]
name = "bundler"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
colored = "2.1.0"
dirs = "5.0.1"
lazy_static = "1.5.0"
path-absolutize = "3.1.1"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = {workspace =true}
sha = "1.0.3"
swc_atoms = "3.0.0"
swc_bundler = "6.0.0"
swc_common = {version="5.0.0",features = ["tty-emitter", "sourcemap"]}
swc_ecma_ast = "5.0.0"
swc_ecma_codegen = "5.0.0"
swc_ecma_loader = "5.0.0"
swc_ecma_parser = "6.0.0"
swc_ecma_transforms_base = "6.0.1"
swc_ecma_transforms_react = "6.0.0"
swc_ecma_transforms_typescript = "6.0.0"
ureq = { version = "2.12.1", features = ["charset"] }
url = "2.5.4"
