[package]
name = "dino-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.94"
arc-swap = "1.7.1"
axum = { version = "0.7.9", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
matchit = "0.7"
tokio = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
serde = { version = "1.0.216", features = ["derive"] }
indexmap = { version = "2.7.0", features = ["serde"] }
thiserror = "2.0.6"
